improved responsiveness for login & signup

--- a/insta-clone/angular.json
+++ b/insta-clone/angular.json
@@ -120,6 +120,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "insta-clone"
+    }
+  },
+  "defaultProject": "insta-clone",
+  "cli": {
+    "analytics": false
+  }
 }
