--- a/insta-clone/package.json
+++ b/insta-clone/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "multer": "^1.4.2",
     "rxjs": "~6.4.0",
     "screenfull": "^3.3.0",
     "tslib": "^1.10.0",
