--- a/insta-clone/package.json
+++ b/insta-clone/package.json
@@ -22,6 +22,7 @@
     "fs": "0.0.1-security",
     "multer": "^1.4.2",
     "ng2-file-upload": "^1.4.0",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.4.0",
     "screenfull": "^3.3.0",
     "tslib": "^1.10.0",
