--- a/insta-clone/package.json
+++ b/insta-clone/package.json
@@ -12,15 +12,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.14",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@fortawesome/fontawesome-free": "^5.13.0",
     "fs": "0.0.1-security",
+    "hammerjs": "^2.0.8",
     "multer": "^1.4.2",
     "ng2-file-upload": "^1.4.0",
     "ng2-search-filter": "^0.5.1",
