--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 node_modules/
 package-lock.json
-**/*/yarn.lock
-**/*/package-lock.json
+**/yarn.lock
+**/package-lock.json
 package-lock.json
 
 .vscode
